--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -12,125 +12,109 @@
     </div>
 }
 
-<style>
-    .row-container {
-        display: inline-block;
-        vertical-align: middle;
-    }
-</style>
-
-<div class="container p-2 form-container">
-    <div class="container mt-4 form-container-content">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Edit LGU Staff User</h1>
-                <h6 class="text-dark">LGU Staff</h6>
-            </div>
-        </div>
-
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+    <div class="col-lg-6 mx-auto">
         <form method="POST" id="editUserForm">
-            <div class="row mb-3 user-container">
-                <input type="hidden" name="userID" value="@Model.userID" />
+            <h1 class="display-5 fw-bold">Edit User</h1>
+            <p>EC Staff</p>
 
-                <div class="row mb-3">
-                    <p class="text-danger text-end">* Required field</p>
-                </div>
+            <br />
 
-                <!-- USER ID -->
-                <div class="row mb-3 pb-1">
-                    <label class="form-label">User ID: @Model.userID</label>
-                </div>
+            <input type="hidden" name="userID" value="@Model.userID" />
 
-                <!-- FIRST NAME -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        First Name:
-                        <span class="text-danger" style="padding:5px">*</span>
-                    </label>
+            <!-- User ID -->
+            <div class="row">
+                <label class="col-sm-4 col-form-label text-start">User ID: @Model.userID</label>
+            </div>
+
+            <!-- First Name -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="firstName">First Name:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
                     <input type="text" id="firstName" name="firstName" class="form-control" value="@Model.firstName" required maxlength="65" />
                 </div>
+            </div>
 
-                <!-- MIDDLE NAME -->
-                <div class="row mb-3">
-                    <label class="form-label">Middle Name:</label>
+            <!-- Middle Name -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="middleName">Middle Name:</label>
+                <div class="col-sm-8">
                     <input type="text" id="middleName" name="middleName" class="form-control" value="@Model.middleName" maxlength="65" />
                 </div>
+            </div>
 
-                <!-- LAST NAME -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Last Name:
-                        <span class="text-danger" style="padding: 5px">*</span>
-                    </label>
-                    <input type="text" id="lastName" name="lastName" class="form-control" value="@Model.lastName" required maxlength="65" />
+            <!-- Last Name -->
+            <div class="row">
+                <label class="col-sm-4 col-form-label text-start" for="lastName">Last Name:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
+                    <input type="text" id="lastName" name="lastName" class="form-control" value="@Model.lastName"  required maxlength="65" />
                 </div>
+            </div>
 
-                <!-- EXTENSION NAME -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Extension Name:
-                    </label>
+            <!-- Extension Name -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="extName">Extension Name:</label>
+                <div class="col-sm-8">
                     <input type="text" id="extName" name="extName" class="form-control" value="@Model.extName" maxlength="45" />
                 </div>
+            </div>
 
-                <!-- SEX -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Sex:
-                        <span class="text-danger" style="padding:5px">*</span>
-                    </label>
-                    <div class="row-container">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required @(Model.sex == "M" ? "checked" : "") />
-                            <label class="form-check-label">Male</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required @(Model.sex == "F" ? "checked" : "") />
-                            <label class="form-check-label">Female</label>
-                        </div>
+            <!-- Sex -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start">
+                    Sex <span class="text-danger" style="padding:5px">*</span>
+                </label>
+                <div class="col-sm-8 text-start mt-md-2">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required @(Model.sex == "M" ? "checked" : "") />
+                        <label class="form-check-label" for="maleRadio">Male</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required @(Model.sex == "F" ? "checked" : "") />
+                        <label class="form-check-label" for="femaleRadio">Female</label>
                     </div>
                 </div>
+            </div>
 
-                <!-- BIRTHDATE -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Birthdate:
-                        <span class="text-danger" style="padding: 5px">*</span>
-                    </label>
+            <!-- Birthdate -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="birthdate">Birthdate:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
                     <input type="date" id="birthdate" name="birthdate" class="form-control" value="@Model.birthdate" required pattern="\d{4}-\d{2}-\d{2}" />
                 </div>
+            </div>
 
-                <!-- MOBILE NUMBER -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Mobile Number:
-                        <span class="text-danger" style="padding: 5px">*</span>
-                    </label>
-                    <input type="tel" id="mobileNum" name="mobileNum" class="form-control" value="@Model.mobileNum" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
+            <!-- Mobile Number -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="mobileNum">Mobile Num:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
+                    <input type="tel" id="mobileNum" name="mobileNum" class="form-control" value="@Model.birthdate" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
                 </div>
+            </div>
 
-                <!-- EMAIL ADDRESS -->
-                <div class="row mb-3">
-                    <label class="form-label">
-                        Email Address:
-                        <span class="text-danger" style="padding: 5px">*</span>
-                    </label>
+            <!-- Email Address -->
+            <div class="row mb-1">
+                <label class="col-sm-4 col-form-label text-start" for="emailAddress">Email Address:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
                     <input type="email" id="emailAddress" name="emailAddress" class="form-control" value="@Model.emailAddress" required maxlength="65" placeholder="example@email.com" />
                 </div>
+            </div>
 
-                @if (!string.IsNullOrEmpty(Model.successMessage))
-                {
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <strong>@Model.successMessage</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                }
 
-                <!-- Cancel and Save Button -->
-                <div class="button-spacer">
-                    <a class="btn btn-outline-secondary mr-10" href="/usermanagement/index" role="button">Cancel</a>
-                    <button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+            @if (!string.IsNullOrEmpty(Model.successMessage))
+            {
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>@Model.successMessage</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
+            }
+
+            <br />
+
+            <!-- Cancel and Save Button -->
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="submit" class="btn btn-primary px-4" id="submitBtn" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+                <a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
             </div>
         </form>
     </div>
