--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -54,7 +54,7 @@
 </div>
 
 <!-- Title and Add Button-->
-<div class="row">
+<div class="row mb-2">
     <div class="col-12 d-flex align-items-center justify-content-between">
         <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>User Management</h1>
 
