--- a/Pages/Family/Profile/Add/Index.cshtml
+++ b/Pages/Family/Profile/Add/Index.cshtml
@@ -49,7 +49,7 @@
 								Street Address:
 								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
-							<input type="text" class="form-control" name="centerName" value="@Model.familyInfo.streetAddress" required maxlength="65" />
+							<input type="text" class="form-control" name="streetAddress" value="@Model.familyInfo.streetAddress" required maxlength="65" />
 						</div>
 					</div>
 
@@ -97,7 +97,7 @@
 				</div>
 
 				<div class="row mt-3">
-					@*<!-- living in GIDA -->
+					<!-- living in GIDA -->
 					<div class="col-md-6 living-in-gida">
 						<div class="mb-3">
 							<label class="form-label radio1x2">
@@ -107,7 +107,7 @@
 								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="livingInGida" id="Yes" value="Yes" 
+								<input class="form-check-input" type="radio" name="livingInGida" id="Yes" value="Yes"
 								@if (Model.familyInfo.livingInGida == "Yes")
 								{
 									<text>checked</text>
@@ -117,7 +117,7 @@
 								</label>
 							</div>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="livingInGida" id="No" value="No" 
+								<input class="form-check-input" type="radio" name="livingInGida" id="No" value="No"
 								@if (Model.familyInfo.livingInGida == "No")
 								{
 									<text>checked</text>
@@ -127,7 +127,9 @@
 								</label>
 							</div>
 						</div>
-					</div>*@
+					</div>
+
+					<input type="hidden" name="familyInfo.livingInGida" value="@Model.familyInfo.livingInGida" />
 
 					<!-- beneficiary -->
 					<div class="col-md-6">
@@ -151,15 +153,15 @@
 				</div>
 				</div>*@
 
+				<!-- Cancel and Save Button -->
+				<div class="button-spacer">
+					<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
+					<button type="submit" class="btn btn-primary" href="/family/profile/add/head" id=" submitBtn">
+						Next
+						<i class="bi bi-arrow-right" style="padding:5px"></i>
+					</button>
+				</div>
 			</form>
-		</div>
-		<!-- Cancel and Save Button -->
-		<div class="button-spacer">
-			<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
-			<button type="submit" class="btn btn-primary" id="submitBtn">
-				Next
-				<i class="bi bi-arrow-right" style="padding:5px"></i>
-			</button>
 		</div>
 	</div>
 </div>
