--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,18 +15,18 @@
 
     .slider-wrapper {
         position: relative;
-        max-width: 58rem;
+        max-width: 100rem;
         margin: 0 auto;
     }
 
     .slider {
         display: flex;
-        aspect-ratio: 2.39/ 1;
+        aspect-ratio: 3.00/ 1;
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
         box-shadow: 0 2.9rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-        border-radius: 1rem;
+        border-radius: 0.5rem;
 
     }
 
@@ -34,6 +34,10 @@
         flex: 1 0 100%;
         scroll-snap-align: start;
         object-fit: cover;
+    }
+
+    .slider img:nth-child(3) {
+    object-position: top;
     }
 
     .slider-nav {
