--- a/Pages/Family/Profile/Add/Head.cshtml
+++ b/Pages/Family/Profile/Add/Head.cshtml
@@ -143,7 +143,8 @@
 								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="sex" id="M" value="M" @if (Model.addfamilyheadInfo.sex == "M")
+								<input class="form-check-input" type="radio" name="sex" id="M" value="M"
+								@if (Model.addfamilyheadInfo.sex == "M")
 								{
 									<text>checked</text>
 								}>
@@ -152,7 +153,8 @@
 								</label>
 							</div>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="sex" id="F" value="F" @if (Model.addfamilyheadInfo.sex == "F")
+								<input class="form-check-input" type="radio" name="sex" id="F" value="F"
+								@if (Model.addfamilyheadInfo.sex == "F")
 								{
 									<text>checked</text>
 								}>
@@ -257,12 +259,12 @@
 						<textarea class="form-control" name="description" value="@Model.addfamilyheadInfo.remarks" rows="3" required></textarea>
 					</div>
 				</div>
+				<!-- Cancel and Save Button -->
+				<div class="button-spacer">
+					<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
+					<button type="button" class="btn btn-primary" id="submitBtn" onclick="confirmSave()">Save</button>
+				</div>
 			</form>
-		</div>
-		<!-- Cancel and Save Button -->
-		<div class="button-spacer">
-			<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
-			<button type="button" class="btn btn-primary" id="submitBtn" onclick="confirmSave()">Save</button>
 		</div>
 	</div>
 </div>
