--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -124,11 +124,13 @@
 								<tr style="vertical-align:text-top;">
 									<th style="text-align:center;">#</th>
 									<th style="text-align:center;">Pack ID</th>
-									<th style="text-align:center;">Pack Qty</th>
-									<th style="text-align:center;">Distributed Qty</th>
-									<th style="text-align:center;">Remaining Qty</th>
+									<th style="text-align:center;">
+										Qty<br />
+										<small>(Remaining/Total)</small>
+									</th>
 									<th style="text-align:center;">Date Distributed</th>
 									<th style="text-align:center;">Status</th>
+									<th> </th>
 									<th> </th>
 								</tr>
 							</thead>
@@ -139,9 +141,7 @@
 									<tr style="text-align:center;">
 										<td width="5%">@counter</td>
 										<td width="20%">@item.packID</td>
-										<td width="10%">@item.packQty</td>
-										<td width="10%">@item.distributedQty</td>
-										<td width="10%">@item.remainingQty</td>
+										<td width="20%">@item.remainingQty/@item.packQty</td>
 										<td width="20%">@item.distributedAt</td>
 										<td width="10%">
 											@if (@item.status == "Distributed")
@@ -153,17 +153,17 @@
 												<span class="badge rounded-pill bg-light">@item.status</span>
 											}
 										</td>
+										<td width="15%">
+											<a class="btn btn-success edit-button" href="/disaster/profile/reliefgoodspack/distribute?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
+												Distribute
+											</a>
+										</td>
 										<td width="5%">
 											<div class="d-inline position-relative">
 												<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
 													<i class="bi bi-three-dots-vertical"></i>
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
-													<li>
-														<a class="dropdown-item" href="/disaster/profile/reliefgoodspack/distribute?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
-															Distribute to Evacuees
-														</a>
-													</li>
 													<li>
 														<a class="dropdown-item" href="/disaster/profile/reliefgoodspack/view?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
 															View Pack Inclusions</a>
@@ -242,13 +242,13 @@
 		var table = $('#reliefpack-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 2, 3, 4, 5] }, // Sortable columns
-				{ "orderable": false, "targets": [6, 7] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
+				{ "orderable": false, "targets": [2, 4, 5, 6] } // Non-sortable columns
 			]
 		});
 
 		// Adding filters to specific columns
-		table.columns([6]).every(function () {
+		table.columns([4]).every(function () {
 			var column = this;
 			var select = $('<select><option value=""></option></select>')
 				.appendTo($(column.header()))
@@ -264,7 +264,7 @@
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Packed" and "Distributed" for the "Status" column
-				if (column.index() === 6) {
+				if (column.index() === 4) {
 					// Set specific filter options only if they haven't been added
 					if (select.find("option[value='Packed']").length == 0) {
 						select.append('<option value="Packed">Packed</option>');
