--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -44,69 +44,67 @@
 	</div>
 }
 
-<div class="content">
-	<!-- Breadcrumb -->
-	<div class="row pb-2" aria-label="breadcrumb">
-		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>Disaster</strong></a></li>
-			</ol>
-		</nav>
-	</div>
+<!-- Breadcrumb -->
+<div class="row pb-2" aria-label="breadcrumb">
+	<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+			<li class="breadcrumb-item active"><a><strong>Disaster</strong></a></li>
+		</ol>
+	</nav>
+</div>
 
-	<!-- Title and Add Button-->
-	<div class="row p-2">
-		<div class="col d-flex align-items-center">
-			<h1><i class="bi bi-fire"></i>Disaster</h1>
-		</div>
+<!-- Title and Add Button-->
+<div class="row mb-2">
+	<div class="col-12 d-flex align-items-center justify-content-between">
+		<h1><i class="bi bi-fire" style="padding: 0 5px 0 5px;"></i>Disaster</h1>
 
-		<div class="col-auto d-flex justify-content-between align-items-center">
-			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2" href="/disaster/add">
-					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
-					Add Disaster
-				</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- Table -->
-	<div class="row p-2">
-		<div class="col-lg-12">
-			<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-				<thead>
-					<tr style="vertical-align: top;">
-						<th>#</th>
-						<th>Disaster</th>
-						<th>Type </th>
-						<th>Description</th>
-						<th>Date Occured</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					@{ var counter = 1; }
-					@foreach (var item in Model.listDisaster)
-					{
-						<tr>
-							<td width="5%">@counter</td>
-							<td width="20%">@item.disasterName</td>
-							<td width="15%" style="text-align: center;">@item.disasterType</td>
-							<td width="35%">@item.description</td>
-							<td width="15%" style="text-align: center;">@item.dateOccured</td>
-							<td width="10%">
-								<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
-									View
-								</a>
-							</td>
-						</tr>
-						counter++;
-					}
-				</tbody>
-			</table>
+		<div class="d-flex justify-content-end align-items-center">
+			<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/add">
+				<i class="bi bi-plus-circle pt" style="padding-right: 5px;"></i>
+				Add Disaster
+			</a>
+			<a class="btn btn-primary mb-2 d-sm-none" href="/disaster/add">
+				<i class="bi bi-plus-circle pt"></i>
+			</a>
 		</div>
 	</div>
+</div>
+
+<div class="row">
+	<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+		<thead>
+			<tr style="vertical-align: top;">
+				<th width="5%">#</th>
+				<th width="20%">Disaster</th>
+				<th width="15%">Type </th>
+				<th width="35%">Description</th>
+				<th width="15%">Date Occured</th>
+				<th width="10%"></th>
+			</tr>
+		</thead>
+		<tbody>
+			@{
+				var counter = 1;
+			}
+			@foreach (var item in Model.listDisaster)
+			{
+				<tr>
+					<td>@counter</td>
+					<td>@item.disasterName</td>
+					<td>@item.disasterType</td>
+					<td>@item.description</td>
+					<td>@item.dateOccured</td>
+					<td>
+						<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
+							View
+						</a>
+					</td>
+				</tr>
+				counter++;
+			}
+		</tbody>
+	</table>
 </div>
 
 <!-- Making the table responsive -->
@@ -120,24 +118,49 @@
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([2]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				select.append('<option value="' + d + '">' + d + '</option>');
+				menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+					'<label class="form-check-label ps-1">' + d + '</label></div>');
 			});
+
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
