--- a/Pages/Disaster/Add.cshtml
+++ b/Pages/Disaster/Add.cshtml
@@ -24,36 +24,25 @@
 	</div>
 }
 
-<div class="container p-2 form-container">
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-6 mx-auto">
+		<!--NOTE: Labels are longer so column sizes here are larger-->
+		<form method="POST">
+			<h1 class="display-5 fw-bold">Add Disaster</h1>
+			<br />
 
-	<div class="container mt-4 form-container-content">
-
-		<div class="row">
-			<div class="col text-center">
-				<h1>Add Disaster</h1>
-			</div>
-		</div>
-
-		<div class="row pt-4">
-			<form method="POST">
-				<div class="row mb-3">
-					<p class="text-danger text-end">* Required field</p>
-				</div>
-				<!-- Disaster Name -->
-				<div class="mb-3">
-					<label class="form-label">
-						Disaster Name:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Disaster Name -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">Disaster Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" name="disasterName" value="@Model.disasterInfo.disasterName" placeholder="ex. Typhoon Pedro" required maxlength="65">
 				</div>
+			</div>
 
-				<!-- Disaster Type -->
-				<div class="mb-3">
-					<label class="form-label">
-						Disaster Type:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Disaster Type -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterType">Disaster Type:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<select class="form-select" name="disasterType" required>
 						<option value="" selected disabled>Select Disaster Type</option>
 						@if (Model.DisasterTypes != null)
@@ -65,40 +54,41 @@
 						}
 					</select>
 				</div>
+			</div>
 
-				<!-- Date Occurred -->
-				<div class="mb-3">
-					<label class="form-label">
-						Date Occurred:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
-					<input type="date" class="form-control text-muted" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
+			<!-- Date Occurred -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="dateOccured">Date Occured:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
 				</div>
+			</div>
 
-				<!-- Disaster Description -->
-				<div class="mb-3">
-					<label class="form-label">
-						Description:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Disaster Description -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="description">Description:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<textarea class="form-control" name="description" value="@Model.disasterInfo.description" rows="4" required></textarea>
 				</div>
+			</div>
 
-				@if (!string.IsNullOrEmpty(Model.successMessage))
-				{
-					<div class="alert alert-success alert-dismissible fade show" role="alert">
-						<strong>@Model.successMessage</strong>
-						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-					</div>
-				}
+			@if (!string.IsNullOrEmpty(Model.successMessage))
 
-				<!-- Cancel and Save Button -->
-				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/disaster/index" role="button">Cancel</a>
-					<button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
+			{
+				<div class="alert alert-success alert-dismissible fade show" role="alert">
+					<strong>@Model.successMessage</strong>
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				</div>
-			</form>
-		</div>
+			}
+			
+			<br />
+
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<button type="submit" class="btn btn-primary px-4" id="submitBtn">Save</button>
+				<a href="/disaster/index" role="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+			</div>
+		</form>
 	</div>
 </div>
 
